data/derived/fa15/progs/unify/prog1092.ml.out
Characters 97-98:
  | (x,y) :: l -> if k = x then y else assoc (d,k,y);;
                                                  ^
Error: This expression has type 'a but an expression was expected of type
         ('b * 'a) list
       The type variable 'a occurs inside ('b * 'a) list
